# librender

./: Cargo.toml  LICENSE  README
src/: lib.rs
src/event/: mod.rs
src/platform/: mod.rs
src/platform/glfw/: mod.rs
src/platform/opengl/: buffer.rs  mod.rs  shader.rs  texture.rs  vertex_array.rs
src/render/: buffer.rs  drawable_text.rs  glyph.rs  mesh.rs  mod.rs  render_api.rs  shader.rs  texture.rs  window.rs
