[package]
name = "librender"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dashmap = "5.4.0"
dyn-clone = "1.0.9"
freetype-rs = "0.31.0"
gl = "0.14.0"
glfw = "0.45.0"
once_cell = "1.14.0"
nalgebra = "0.31.1"
